# amlnn-model-playground

./: README.md  README_CN.md
examples/mobilenet/cpp/: build-android.sh
examples/mobilenet/cpp/src/: CMakeLists.txt
examples/ppocr-det/cpp/src/: postprocess.cpp
examples/whisper/cpp/: build-android.sh  build-linux.sh
examples/whisper/cpp/src/: CMakeLists.txt
examples/yolov8/cpp/src/: CMakeLists.txt  main.cpp  postprocess.cpp  postprocess.h
examples/yoloworld/cpp/src/: CMakeLists.txt
